inprogress ViewModel Activity,Fragment

--- a/presentation/src/main/res/layout/fragment_web.xml
+++ b/presentation/src/main/res/layout/fragment_web.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.web.IWeb.Presenter"/>
+            type="com.arch.presentation.fragment.web.WebVM"/>
         <variable
             name="item"
             type="com.arch.portdomain.model.NewsModel"/>
