--- a/presentation/src/main/res/layout/fragment_news.xml
+++ b/presentation/src/main/res/layout/fragment_news.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.news.INews.Presenter"/>
+            type="com.arch.presentation.fragment.news.NewsViewModel"/>
     </data>
 
 
