--- a/presentation/src/main/res/layout/fragment_news_favorites.xml
+++ b/presentation/src/main/res/layout/fragment_news_favorites.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.favorites.IFavoritesNews.Presenter"/>
+            type="com.arch.presentation.fragment.favorites.NewsFavoritesVM"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
