--- a/presentation/src/main/res/layout/fragment_search.xml
+++ b/presentation/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="event"
-            type="com.arch.presentation.fragment.search.ISearch.Presenter" />
+            type="com.arch.presentation.fragment.search.SearchVM" />
     </data>
 
 
