--- a/presentation/src/main/res/layout/item_favorites.xml
+++ b/presentation/src/main/res/layout/item_favorites.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.favorites.IFavoritesNews.Presenter"/>
+            type="com.arch.presentation.fragment.favorites.NewsFavoritesVM"/>
         <variable
             name="item"
             type="com.arch.portdomain.model.NewsModel"/>
