--- a/presentation/src/main/res/layout/item_group.xml
+++ b/presentation/src/main/res/layout/item_group.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.group.INewsGroup.Presenter"/>
+            type="com.arch.presentation.fragment.group.NewsGroupVM"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
