--- a/presentation/src/main/res/layout/item_lang.xml
+++ b/presentation/src/main/res/layout/item_lang.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.group.INewsGroup.Presenter"/>
+            type="com.arch.presentation.fragment.group.NewsGroupVM"/>
     </data>
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
