--- a/presentation/src/main/res/layout/item_news.xml
+++ b/presentation/src/main/res/layout/item_news.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="event"
-            type="com.arch.presentation.fragment.news.INews.Presenter"/>
+            type="com.arch.presentation.fragment.news.NewsViewModel"/>
     </data>
 
     <androidx.cardview.widget.CardView
