fix finish fragment NewsGroup,News,WebFragment

--- a/presentation/src/main/res/layout/fragment_web.xml
+++ b/presentation/src/main/res/layout/fragment_web.xml
@@ -14,16 +14,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="835dp"
         android:background="@android:color/black">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_web_panel"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:background="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,9 +33,9 @@
                 android:id="@+id/iv_web_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_marginBottom="@dimen/menu_header_bottom"
                 android:layout_marginStart="@dimen/menu_header_left"
                 android:layout_marginTop="@dimen/menu_header_top"
+                android:layout_marginBottom="@dimen/menu_header_bottom"
                 android:onClick="@{()->event.menu()}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -47,10 +47,10 @@
                 android:id="@+id/tv_web_description_layout"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginBottom="@dimen/web_new_bottom"
-                android:layout_marginEnd="@dimen/web_new_right"
                 android:layout_marginStart="@dimen/web_new_left"
                 android:layout_marginTop="@dimen/web_new_top"
+                android:layout_marginEnd="@dimen/web_new_right"
+                android:layout_marginBottom="@dimen/web_new_bottom"
                 android:gravity="center"
                 android:text="@string/news_web"
                 android:textColor="@android:color/white"
@@ -65,9 +65,9 @@
                 android:id="@+id/iv_web_favorites"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/web_favorites_bottom"
-                android:layout_marginEnd="@dimen/web_favorites_right"
                 android:layout_marginTop="@dimen/web_new_top"
+                android:layout_marginEnd="@dimen/web_favorites_right"
+                android:layout_marginBottom="@dimen/web_favorites_bottom"
                 android:onClick="@{()->event.saveNews(item)}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/gl_web_guideline"
@@ -85,16 +85,15 @@
                 android:id="@+id/iv_web_share"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_marginBottom="@dimen/web_share_bottom"
-                android:layout_marginEnd="@dimen/web_share_right"
                 android:layout_marginStart="@dimen/web_share_left"
                 android:layout_marginTop="@dimen/web_share_top"
+                android:layout_marginEnd="@dimen/web_share_right"
+                android:layout_marginBottom="@dimen/web_share_bottom"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/gl_web_guideline"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_menu_share" />
-
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -103,9 +102,9 @@
             android:id="@+id/wvs_web"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -116,9 +115,9 @@
             style="@android:style/Widget.DeviceDefault.ProgressBar"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/progress_indicator"
             app:layout_constraintBottom_toBottomOf="@+id/wvs_web"
             app:layout_constraintEnd_toEndOf="parent"
