inprogress test Ui

--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
             type="com.arch.presentation.activity.MainViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mainActivityLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
